@@ -3,6 +3,10 @@
 	* GNUmakefile: No longer specify 64-bitness of file I/O: it is
 	redundant on x86-64 and breaks fts().
 
+	* libdtrace/dt_string.c (strrstr): New function.
+	* libdtrace/dt_string.h (strrstr): Prototype it.
+	* Makeconfig: Provide it if not already available.
+
 2012-06-20  Nick Alcock  <nick.alcock@oracle.com>
 
 	* Makeconfig (CONFIG_H): Add missing path slash.
